--- a/src/components/NewsItem.css
+++ b/src/components/NewsItem.css
@@ -76,6 +76,7 @@
     padding: 0.5rem 1rem;
     z-index: 1;
     border-top-left-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 @media screen and (max-width: 838px){
